--- a/package.json
+++ b/package.json
@@ -3,17 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.7.0"
+    "chai": "^3.5.0",
+    "mocha": "^3.1.2",
+    "mz": "^2.5.0",
+    "react-scripts": "0.7.0",
+    "supertest": "^2.0.1",
+    "supertest-as-promised": "^4.0.2"
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "express": "^4.14.0",
+    "morgan": "^1.7.0",
     "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+    "react-dom": "^15.4.0",
+    "react-router": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:server": "node server",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "mocha test **/**.test.js"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/react-scripts/config/eslint.js",
+    "env": {
+      "browser": true,
+      "mocha": true,
+      "node": true
+    },
+    "rules": {
+      "strict": 0
+    }
   }
 }
