--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "jackmarchant",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "6.9.1"
+  },
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^3.1.2",
