--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "start:server": "node server",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "mocha test **/**.test.js"
+    "test": "mocha test **/**.test.js",
+    "postinstall": "npm run build && npm run start:server"
   },
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/config/eslint.js",
