--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "chai": "^3.5.0",
     "mocha": "^3.1.2",
     "mz": "^2.5.0",
-    "react-scripts": "0.7.0",
     "supertest": "^2.0.1",
     "supertest-as-promised": "^4.0.2"
   },
@@ -19,14 +18,16 @@
     "morgan": "^1.7.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "react-scripts": "0.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "start:server": "node server",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "mocha test **/**.test.js"
+    "test": "mocha test **/**.test.js",
+    "postinstall": "yarn run build"
   },
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/config/eslint.js",
