--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "engines": {
     "node": "6.9.1"
   },
+  "homepage": "http://www.jackmarchant.com",
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^3.1.2",
