--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "mocha test **/**.test.js",
-    "postinstall": "yarn run build"
+    "postinstall": "yarn run build",
+    "production": "aws s3api put-object --body build/index.html --bucket www.jackmarchant.com --content-type application/html --key build/index.html"
   },
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/config/eslint.js",
