--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "jackmarchant",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "engines": {
     "node": "6.9.1"
   },
-  "homepage": "http://www.jackmarchant.com",
+  "homepage": "https://jackmarchant.com",
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^3.1.2",
